@@ -3,6 +3,15 @@ Change history for Coverage.py
 ------------------------------
 
 
+Latest
+------
+
+- Empty files are now reported as 100% covered in the XML report, not 0%
+  covered, as reported in `issue 345`_.
+
+.. _issue 345: https://bitbucket.org/ned/coveragepy/issue/345/xml-reports-line-rate-0-for-empty-files
+
+
 Version 4.0a2 --- 14 January 2014
 ---------------------------------
 
